--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -41,7 +41,7 @@
   <div class="govuk-grid-column-two-thirds">
     <ng-container *ngIf="canEditEstablishment">
       <div class="govuk-!-margin-bottom-4">
-        <a class="govuk-list" [routerLink]="['/workplace', workplace.uid, 'add-mandatory-training']"
+        <a class="govuk-list" [routerLink]="['/workplace', workplace.uid, 'add-and-manage-mandatory-training']"
           >Add and manage mandatory training categories
         </a>
       </div>
