--- a/src/app/shared/components/training-info-panel/training-info-panel.component.html
+++ b/src/app/shared/components/training-info-panel/training-info-panel.component.html
@@ -1,4 +1,8 @@
-<div class="asc-summary-box" data-testid="summary-box">
+<div
+  class="asc-summary-box"
+  data-testid="summary-box"
+  *ngIf="totalExpiredTraining || totalExpiringTraining || totalStaffMissingMandatoryTraining"
+>
   <div class="asc-container">
     <div class="asc-content" *ngIf="totalExpiredTraining" data-testid="expired-column">
       <div class="asc-content--image">
@@ -6,7 +10,7 @@
       </div>
       <div>
         <a href="#" class="govuk-link govuk-link--no-visited-state"
-          ><strong>{{ totalExpiredTraining }}</strong>
+          >{{ totalExpiredTraining }}
           <ng-container [ngPlural]="totalExpiredTraining">
             <ng-template ngPluralCase="=1"> record has expired </ng-template>
             <ng-template ngPluralCase="other"> records have expired </ng-template>
@@ -21,7 +25,7 @@
       </div>
       <div>
         <a href="#" class="govuk-link govuk-link--no-visited-state">
-          <strong>{{ totalExpiringTraining }}</strong>
+          {{ totalExpiringTraining }}
           <ng-container [ngPlural]="totalExpiringTraining">
             <ng-template ngPluralCase="=1"> record expires soon </ng-template>
             <ng-template ngPluralCase="other"> records expire soon </ng-template>
@@ -36,7 +40,7 @@
       </div>
       <div>
         <a href="#" class="govuk-link govuk-link--no-visited-state">
-          <strong>{{ totalStaffMissingMandatoryTraining }}</strong>
+          {{ totalStaffMissingMandatoryTraining }}
           <ng-container [ngPlural]="totalStaffMissingMandatoryTraining">
             <ng-template ngPluralCase="=1"> staff is missing mandatory training </ng-template>
             <ng-template ngPluralCase="other"> staff are missing mandatory training </ng-template>
