create new training and quals folder with routing, create new expired training component and access from link on t and q tab

--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -19,6 +19,7 @@
   <app-training-info-panel
     *ngIf="workers"
     data-testid="trainingInfoPanel"
+    [workplaceUid]="workplace.uid"
     [totalExpiredTraining]="totalExpiredTraining"
     [totalExpiringTraining]="totalExpiringTraining"
     [totalStaffMissingMandatoryTraining]="staffMissingMandatoryTraining"
