Test for radio button drop down in add-edit-qualification

--- a/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
+++ b/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
@@ -57,6 +57,7 @@
                 class="govuk-radios__conditional govuk-!-margin-bottom-2"
                 [class.govuk-radios__conditional--hidden]="form.get('type').value !== item.value"
                 id="conditional-terms-conditional-{{ item.key }}"
+                [attr.data-testid]="item.value"
               >
                 <app-qualification-form
                   [form]="form"
