--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.html
@@ -2,20 +2,38 @@
   <div class="asc-summary-box">
     <div class="govuk-grid-column-one-third asc-total-records">
       <p class="govuk-!-margin-bottom-0">
-        <span class="asc-total-records--count govuk-!-margin-right-2">10</span
+        <span class="asc-total-records--count govuk-!-margin-right-2">{{ trainingCount + qualificationsCount }}</span
         ><span class="asc-total-records--text">records added</span>
       </p>
     </div>
     <div class="govuk-grid-column-one-third">
       <p class="govuk-!-margin-bottom-0">
-        <span class="asc-total-records--count govuk-!-margin-right-2">8</span
-        ><span class="asc-total-records--text">training records</span>
+        <span class="asc-total-records--count govuk-!-margin-right-2">{{ trainingCount }}</span
+        ><span class="asc-total-records--text"
+          ><ng-container [ngPlural]="trainingCount">
+            <ng-template ngPluralCase="=1">
+              <span>training record</span>
+            </ng-template>
+            <ng-template ngPluralCase="other">
+              <span>training records</span>
+            </ng-template>
+          </ng-container></span
+        >
       </p>
     </div>
     <div class="govuk-grid-column-one-third">
       <p class="govuk-!-margin-bottom-0">
-        <span class="asc-total-records--count govuk-!-margin-right-2">2</span
-        ><span class="asc-total-records--text">qualification records</span>
+        <span class="asc-total-records--count govuk-!-margin-right-2">{{ qualificationsCount }}</span
+        ><span class="asc-total-records--text">
+          <ng-container [ngPlural]="qualificationsCount">
+            <ng-template ngPluralCase="=1">
+              <span>qualification record</span>
+            </ng-template>
+            <ng-template ngPluralCase="other">
+              <span>qualification records</span>
+            </ng-template>
+          </ng-container></span
+        >
       </p>
     </div>
   </div>
